--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -1,2 +1,34 @@
-<h1>Competitions#index</h1>
-<p>Find me in app/views/competitions/index.html.erb</p>
+<p class="is-capitalized is-size-3 has-text-weight-semibold is-family-sans-serif">Competitions Center</p>
+
+<div>
+  <div class="has-text-right">
+    <%= link_to 'New Competition', '/competitions/new', class:'button is-primary' %>
+  </div>
+
+  <table class="table is-striped is-fullwidth mt-2">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>Competition Name</th>
+        <th class="has-text-centered">Start Date</th>
+        <th class="has-text-centered">End Date</th>
+        <th class="has-text-centered">State</th>
+        <th class="has-text-centered">Action</th>
+      </tr>
+    </thead>
+    <tbody>
+      <% i = 1 %>
+      <% (@competitions  || []).each do |competition| %>
+        <tr>
+          <td><%= i %></td>
+          <td><%= competition.name %></td>
+          <td class="has-text-centered"><%= competition.start_date %></td>
+          <td class="has-text-centered"><%= competition.end_date %></td>
+          <td class="has-text-centered"><%= competition.status rescue  '' %></td>
+          <td class="has-text-centered"><%= link_to 'view', "/competitions/#{competition.id}" ,class:  'button is-info' %></td>
+        </tr>
+        <% i += 1 %>
+      <% end %>
+    </tbody>
+  </table>
+</div>
