--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,6 +23,46 @@
   </head>
 
   <body>
+  <nav class="navbar is-dark" role="navigation" aria-label="main navigation">
+    <div class="navbar-brand">
+      <a class="navbar-item" href="/">
+        <img src="/assets/asset.png" alt="" >
+      </a>
+
+      <a role="button" class="navbar-burger" aria-label="menu" aria-expanded="false" data-target="navbarBasicExample">
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+        <span aria-hidden="true"></span>
+      </a>
+    </div>
+
+    <div id="navbarBasicExample" class="navbar-menu">
+      <div class="navbar-start">
+        <%= link_to 'Dashboard', '/',class: 'navbar-item' %>
+        <%= link_to 'Competitions', '/competitions',class: 'navbar-item' %>
+        <%= link_to 'Reward', '/points_logs',class: 'navbar-item' %>
+        <%= link_to 'Vote', '/votes',class: 'navbar-item' %>
+      </div>
+      <div class="navbar-end">
+        <div class="navbar-item">
+          <% if authenticated? %>
+            <div class="buttons">
+              <%= button_to "Log out", session_path, method: :delete, class: 'button is-danger' %>
+            </div>
+          <% else %>
+            <div class="buttons">
+              <a class="button is-primary">
+                <strong>Sign up</strong>
+              </a>
+            </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+  </nav>
+  <div class="container mt-2">
     <%= yield %>
+  </div>
   </body>
 </html>
