--- a/app/views/points_logs/new.html.erb
+++ b/app/views/points_logs/new.html.erb
@@ -2,7 +2,7 @@
   <h3 class="is-3 title">Cast ballot in <%= @competition.name %> Elections</h3>
 </div>
 <div class="box mt-3">
-  <%= form_with model: @vote do |form|%>
+  <%= form_with model: @reward do |form|%>
     <div class="field">
       <label class="label">Select Recipient</label>
       <div class="control">
