--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -24,7 +24,7 @@
                         <% (@ranks[competition.id] || []).each do |ranking|%>
                           <tr>
                             <td class="has-text-centered"><%= @ranks[competition.id].index(ranking) +1 %></td>
-                            <td><%= ranking[0] %></td>
+                            <td><%= ranking[0].first %></td>
                             <td class="has-text-right"><%= ranking[1] %></td>
                           </tr>
                         <% end %>
