Incorporated user feedback

--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -4,7 +4,7 @@
   <nav class="level">
     <div class="level-left">
       <div class="level-item">
-        <p class="subtitle is-5"><strong>123</strong> posts</p>
+        <p class="subtitle is-5"><strong><%= @competitions.length %> Competition(s)</strong></p>
       </div>
     </div>
     <div class="level-right">
