--- a/app/views/competitions/show.html.erb
+++ b/app/views/competitions/show.html.erb
@@ -1,5 +1,5 @@
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/4.4.1/chart.umd.js" integrity="sha512-ZwR1/gSZM3ai6vCdI+LVF1zSq/5HznD3ZSTk7kajkaj4D292NLuduDCO1c/NT8Id+jE58KYLKT7hXnbtryGmMg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <style>
 .cell {
   display: grid;
@@ -95,7 +95,7 @@
   <div class="level-item has-text-centered">
     <div class="card h-100">
       <div class="card-content">
-        <canvas id="myChart" width="700" height="90"></canvas>
+        <canvas id="myChart" style="width: 100%;" height="120"></canvas>
       </div>
     </div>
   </div>
@@ -129,5 +129,35 @@
 </div>
 
 <script>
+var labels = "<%= @ranking.first(3).collect{|x| x.first.first }.join(",")%>"
+var densityData = {
+  label: 'Points',
+  data: <%= @ranking.first(3).collect{|x| x.second } %>,
+  borderWidth: 2,
+  hoverBorderWidth: 0
+};
+  var config = {
+    type: 'bar',
+    data: {
+      labels: labels.split(','),
+      datasets: [densityData],
+    },
+    options: {
+      indexAxis: 'y',
+      legend: { show: false},
+    plugins: {
+      legend: {
+        display : false,
+      }
+    },
+    elements: {
+      rectangle: {
+        borderSkipped: 'left',
+      }
+    }
+    }
+  }
 
+  var ctx = document.getElementById('myChart').getContext('2d');
+  new Chart(ctx, config);
 </script>
