--- a/app/views/points_logs/index.html.erb
+++ b/app/views/points_logs/index.html.erb
@@ -1,4 +1,4 @@
-<p class="is-capitalized is-size-3 has-text-weight-semibold is-family-sans-serif">Rewards Center</p>
+<p class="is-capitalized is-size-3 has-text-weight-semibold is-family-sans-serif">Rewards and Voting Center</p>
 
 <div class="columns">
   <div class="column is-four-fifths">
@@ -24,11 +24,5 @@
         </div>
       <% end %>
     </div>
-  </div>
-  <div class="column">
-    <h4 class="subtitle is-4">Closed Contests</h4>
-    <table>
-
-    </table>
-  </div>
+  </div> 
 </div>
