Hid new competition button

--- a/app/views/competitions/index.html.erb
+++ b/app/views/competitions/index.html.erb
@@ -9,7 +9,7 @@
     </div>
     <div class="level-right">
       <div class="level-item">
-        <%= link_to 'New Competition', '/competitions/new', class:'button is-primary' %>
+        <%#= link_to 'New Competition', '/competitions/new', class:'button is-primary' %>
       </div>
     </div>
   </nav>
