--- a/app/views/competitions/show.html.erb
+++ b/app/views/competitions/show.html.erb
@@ -70,20 +70,20 @@
                 </tr>
                 <tr>
                   <td>Points Earned</td>
-                  <td>:</td>
-                  <td> <%= @summary[:leader_count] %> </td>
+                  <td style="width:2vw;" class="has-text-centered" >:</td>
+                  <td class="is-italic"> <%= @summary[:leader_count] %> </td>
                 </tr>
                 <tr>
-                  <td>% Earned</td>
-                  <td>:</td>
-                  <td>
+                  <td>Percent Earned</td>
+                  <td style="width:2vw;" class="has-text-centered" >:</td>
+                  <td class="is-italic">
                     <%= "#{((@summary[:leader_count]/@summary[:total_points].to_f)*100).round(2)}%" %>
                   </td>
                 </tr>
                 <tr>
                   <td>Points to Win</td>
-                  <td>:</td>
-                  <td> <%= @summary[:points_to_win]%> </td>
+                  <td style="width:2vw;" class="has-text-centered" >:</td>
+                  <td class="is-italic"> <%= @summary[:points_to_win]%> </td>
                 </tr>
               </table>
             </div>
@@ -95,7 +95,44 @@
   <div class="level-item has-text-centered">
     <div class="card h-100">
       <div class="card-content">
+        <p class="title is-5">Competition Top 3</p>
         <canvas id="myChart" style="width: 100%;" height="120"></canvas>
+      </div>
+    </div>
+  </div>
+  <div class="level-item has-text-centered">
+    <div class="card h-100">
+      <div class="card-content">
+        <div class="media">
+          <div class="media-content has-text-left">
+            <table>
+              <tr>
+                <td colspan='3' class="title is-5">Competition Statistics</td>
+              </tr>
+              <tr>
+                <td>Highest Gifter</td>
+                <td style="width:2vw;" class="has-text-centered" >:</td>
+                <td class="is-italic"> <%= @summary[:highest_gifter] %> </td>
+              </tr>
+              <tr>
+                <td>Most Improved</td>
+                <td style="width:2vw;" class="has-text-centered" >:</td>
+                <td class="is-italic"> <%= @summary[:most_improved] %> </td>
+                </td>
+              </tr>
+              <tr>
+                <td>Most Active</td>
+                <td style="width:2vw;" class="has-text-centered" >:</td>
+                <td class="is-italic"> <%= @summary[:most_active] %> </td>
+              </tr>
+              <tr>
+                <td>Least Active</td>
+                <td style="width:2vw;" class="has-text-centered" >:</td>
+                <td class="is-italic"> <%= @summary[:least_active] %> </td>
+              </tr>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
   </div>
@@ -127,6 +164,25 @@
         </tbody>
     </table>
 </div>
+<!-- Main container -->
+<nav class="level">
+  <div class="level-left">
+    &nbsp;
+  </div>
+  <div class="level-right">
+    <p class="level-item">
+      <%= link_to 'My Rewarding Patterns', "/participant_points/show?competition_id=#{@competition.id}&participant=#{Current.user.person_id}" ,  class: 'button is-link'%>
+    </p>
+    <p class="level-item">
+      <% if @competition.competition_type == "Election" %>
+        <%= link_to 'Vote', "/votes/new?competition_id=#{@competition.id}" ,  class: 'button is-success'%>
+      <% else %>
+        <%= link_to 'Reward', "/points_logs/new?competition_id=#{@competition.id}" ,  class: 'button is-success'%>
+      <% end %>
+      
+    </p>
+  </div>
+</nav>
 
 <script>
 var labels = "<%= @ranking.first(3).collect{|x| x.first.first }.join(",")%>"
