--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,38 @@
+<style>
+  .custom-badge {
+  background-color: #6366f1;
+  color: white;
+  font-weight: bold;
+  padding: 6px 10px;
+  border-radius: 4px;
+  font-size: 0.85rem;
+  display: inline-block;
+  min-width: 32px;
+  text-align: center;
+}
+@media (max-width: 768px) {
+  .desktop-view {
+    display: none !important; 
+  }
+
+  .mobile-view {
+    display: block !important;
+    font-size: 0.9rem;
+    font-weight: bold;
+  }
+}
+
+@media (min-width: 769px) {
+  .desktop-view {
+    display: block !important;
+  }
+
+  .mobile-view {
+    display: none !important;
+  }
+}
+
+</style>
 <p class="is-capitalized is-size-3 has-text-weight-semibold is-family-sans-serif">Leaderboard</p>
 <div class="columns">
   <div class="column ">
@@ -16,18 +51,45 @@
               <% (@current_competitions || []).each do |competition| %>
                 <tr>
                   <td>
-                    <%= link_to competition.name, "/competitions/#{competition.id}" %>
+                    <p class="mobile-view">
+                      <%= link_to competition.name, "/competitions/#{competition.id}" %>
+                      - <%= @remaining_points %> Points
+
+                    </p>
+
+                    <div class="desktop-view">
+                      <%= link_to "/competitions/#{competition.id}", class: 'button is-link is-relative has-text-centered mt-3' do %>
+                        <%= competition.name %>
+                        <span class="custom-badge ml-4">
+                          <%= @remaining_points %>
+                        </span>
+                      <% end %>
+                    </div>
                   </td>
+
                   <td>
                     <% if !@ranks[competition.id].empty? %>
                       <table class="table is-striped is-hoverable is-fullwidth">
-                        <% (@ranks[competition.id] || []).each do |ranking|%>
+                        <thead>
                           <tr>
-                            <td class="has-text-centered"><%= @ranks[competition.id].index(ranking) +1 %></td>
-                            <td><%= ranking[0].first %></td>
-                            <td class="has-text-right"><%= ranking[1] %></td>
+                            <td>Rank</td>
+                            <td><%= (competition.competition_type == "Election" ? 'Candidate' : 'Rewardee')%> </td>
+                            <td><%= (competition.competition_type == "Election" ? 'Votes' : 'Points')%> </td>
                           </tr>
-                        <% end %>
+                        </thead>
+                        <tbody>
+                          <% i = 1 %>
+                          <% (@ranks[competition.id][:rank] || []).each do |ranking|%>
+                            <tr>
+                              <td class="has-text-centered"><%= i %></td>
+                              <td><%= ranking[0].first %></td>
+                              <td class="has-text-right">
+                                <%= ranking[1] %> (<%= ((ranking[1]/@ranks[competition.id][:total_points].to_f)*100).round(2) %>%)
+                              </td>
+                            </tr>
+                            <% i += 1 %>
+                          <% end %>
+                        </tbody>
                       </table>
                     <%else %>
                       No current Rankings
