Update email templates for clarity in password and login instructions

--- a/app/views/recognition_reward_mailer/reset_password_email.html.erb
+++ b/app/views/recognition_reward_mailer/reset_password_email.html.erb
@@ -18,6 +18,9 @@
       Your new password is: <b><i> <%= @password %></i></b>.
     </p>
     <p>
+      Please use this email address and the password attached
+    </p>
+    <p>
       To login, click here: <a href="<%= @url %>" style="color: #002130; font-weight: bold;">Recognition Reward</a>
     </p>
     <p>Cheers! Have a great day!</p>
