--- a/app/views/recognition_reward_mailer/welcome_email.html.erb
+++ b/app/views/recognition_reward_mailer/welcome_email.html.erb
@@ -14,7 +14,7 @@
     Hello <b><i> <%= @user.full_name %></i></b>!
     <p>
       You have successfully signed up to the GHII Employee Recognition Program.
-      Use your OMIS email to log in.
+      Use this email address to log in.
       <br>
       Your initial password is: <b><i> <%= @password %></i></b>.
     </p>
