--- a/app/views/points_logs/new.html.erb
+++ b/app/views/points_logs/new.html.erb
@@ -98,6 +98,15 @@
         snackbar.classList.remove("show");
       }, 3000);
     }
+
+    // Listen for Enter key press
+    document.addEventListener("keydown", (event) => {
+      if (event.key === "Enter") {
+        // Prevent default form submission on Enter
+        event.preventDefault();
+        confirmSubmission();
+      }
+    });
   });
 
   function confirmSubmission() {
@@ -107,16 +116,19 @@
     let reason = document.getElementById("reason_id");
 
     if (!receiver.value || !points.value || !reason.value.trim()) {
-      document.getElementById("submit_id").click();
+      submitButton.click(); 
       return;
     }
+
     document.getElementById("confirm_message").textContent = 
       `Award ${points.value} point(s) to ${receiver.options[receiver.selectedIndex].text}?`;
     document.getElementById("confirm_modal").classList.add("is-active");
   }
+
   function closeModal() {
     document.getElementById("confirm_modal").classList.remove("is-active");
   }
+
   function submitForm() {
     document.getElementById("submit_id").click();
     closeModal();
