--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -73,7 +73,7 @@
                   <td>
                     <p class="mobile-view">
                       <%= link_to competition.name, "/competitions/#{competition.id}" %>
-                      - <%= @remaining_points %> Points
+                      - <%= @participant_point.active_points %> Points
                     </p>
 
                     <div class="desktop-view">
